FIx z-index

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -112,6 +112,8 @@ section {
 }
 
 section.content {
+  position: relative;
+  z-index: 1;
   width: unset;
   padding: 0;
 }
